Media: fail properly on 404 after redirect

Because the readers were still hooked up to the pre-redirect URL,
calling Fail() did not propagate properly.

Also fix some debug statements I needed to find the problem.

BUG=652737

Review-Url: https://codereview.chromium.org/2455693004
Cr-Commit-Position: refs/heads/master@{#428251}

Former-commit-id: e547f4e0b3e0796fb44b508d20ea313f3cb735f1